fixed overflow

--- a/css/main.css
+++ b/css/main.css
@@ -342,13 +342,20 @@ li {
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
-  height: -webkit-max-content;
-  height: -moz-max-content;
-  height: max-content;
+  height: -webkit-max-content !important;
+  height: -moz-max-content !important;
+  height: max-content !important;
 }
 
 .adventure__header {
   position: relative;
+}
+
+.adventure__header img {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .adventure__story {
@@ -626,14 +633,21 @@ li {
 }
 
 .footer-cta .download {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: min-content min-content;
+      grid-template-columns: -webkit-min-content -webkit-min-content;
+      grid-template-columns: min-content min-content;
+  -webkit-column-gap: 1rem;
+          column-gap: 1rem;
 }
 
 @media screen and (max-width: 945px) {
-  .footer-cta .download {
-    max-width: 80%;
+  .footer-cta .download__btn {
+    width: 125px;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
   }
 }
 
@@ -651,7 +665,6 @@ li {
 @media screen and (max-width: 945px) {
   .footer-cta .mockup-1 {
     position: absolute;
-    left: -500px;
   }
 }
 
@@ -659,8 +672,15 @@ li {
   position: absolute;
   -webkit-transform: scale(0.8);
           transform: scale(0.8);
-  left: 11.25rem;
   z-index: -10;
+  left: 12.25rem;
+}
+
+@media screen and (max-width: 945px) {
+  .footer-cta .mockup-2 {
+    left: 11.25rem;
+    top: 0;
+  }
 }
 
 .btn {
